--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "autoprefixer": "^10.4.20",
+    "emailjs-com": "^3.2.0",
     "gsa": "^0.0.0",
     "gsap": "^3.12.5",
     "next": "15.0.1",
